# Haskiann

./: .gitignore  CHANGELOG.md  README.md  haskiann.cabal  stack.yaml
src/: Haskiann.hs
src/Haskiann/: Core.hs
src/Haskiann/Data/: Graph.hs  HList.hs  HVect.hs  Nat.hs  Tensor.hs  TensorDesc.hs
src/Internal/: Prelude.hs
